# dreamlogger

./: README.md  dreamlogger.py  pyproject.toml
src/dreamlogger.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/dreamlogger_Funasitien/: __init__.py
