[project]
name = "dreamlogger"
version = "0.0.2"
authors = [
  { name="Funasitien", email="funasitien@dreamclouds.fr" },
]
description = "Logs made better."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Funasitien/dreamlogger"
Issues = "https://github.com/Funasitien/dreamlogger/issues"
